# chatterbox

./: .gitignore  README.md  example_for_mac.py  example_tts.py  example_vc.py  gradio_tts_app.py  gradio_tts_enhanced.py  gradio_vc_app.py  pyproject.toml  tts_core.py
src/chatterbox/: __init__.py  perth.py  tts.py  vc.py
src/chatterbox/common/: sage_patch.py  torch_device.py
src/chatterbox/models/t3/: llama_model.py  t3.py
src/chatterbox/models/t3/inference/: alignment_stream_analyzer.py  t3_hf_backend.py
src/chatterbox/models/t3/modules/: perceiver.py
src/chatterbox/processors/: asrprocessor.py  audioprocessor.py  textprocessor.py
