[project]
name = "chatterbox-tts"
version = "0.2.0"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy>=1.26.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.46.3",
    "diffusers>=0.29.0",
    "conformer>=0.3.2",
    "safetensors>=0.5.3",
    "pyloudnorm",
    "ffmpeg-python",
    "jiwer",
    "nltk",
    "openai-whisper",
    "faster-whisper",
]

[project.urls]
Homepage = "https://github.com/mgz-dev/chatterbox/tree/master"
Repository = "https://github.com/mgz-dev/chatterbox/tree/master"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 150
target-version = ["py310"]
include = '\.py$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | env
  | venv
  | build
  | dist
  | (^|.*/)(__init__|setup)\.py
)/
'''
extend-exclude = '''
  (?i:.*docker.*)
  | .*\.ipynb
'''

skip-string-normalization = true